# grain

./: .bunfig.toml  .dockerignore  .gitignore  .npmrc  .zshrc-grain  ALL_PAGES_CREATED.md  ARM_UBUNTU_FIX.md  BUILD_ERRORS_FIX.md  CHINESE_TO_ENGLISH_AUDIT.md  COMPLETE_PAGES_SUMMARY.md  CROSS_PLATFORM_FIX.md  FINAL_BUILD_CONFIG.md  FINAL_BUILD_STATUS.md  FINAL_OPTIMIZATION_SUMMARY.md  LAYOUT_AUDIT_CHECKLIST.md  MCP_FILESYSTEM_SETUP.md  NGINX_DIAGNOSIS.md  NGINX_QUICK_FIX.md  NGINX_TROUBLESHOOTING.md  OPTIMIZATION_SUMMARY.md  PAGES_COMPLETE_SUMMARY.md  README.md  README.zh-CN.md  REBRANDING-GUIDE.md  REFINEMENT_SUMMARY.md  ROUTER_PORT_FORWARD_FIX.md  SECURITY_FIX_GUIDE.md  SIDEBAR_DISPLAY_ANALYSIS.md  SPEC_COMPLETE.md  SPEC_CREATED.md  TAG_TRIGGER_ANALYSIS.md  TAURI_BUILD_FIX.md  TODO.md  ULTIMATE_REFINEMENT_SUMMARY.md  USER_EXPERIENCE_IMPROVEMENTS.md  UX_ENHANCEMENT_SUMMARY.md  WORKFLOW_COMPARISON.md  WORKFLOW_FIX_APPLIED.md  biome.json  check-msix-build.sh  (+11 more)
.cargo/: config.toml
.config/fish/: grain.fish
.github/: CODEOWNERS  QUICK_REFERENCE.md  SETUP_CHECKLIST.md  dependabot.yml  labeler.yml
.github/workflows/: aur-bin-publish.yml  aur-publish.yml  backup.yml  build-msix.yml  bundle-size.yml  changelog.yml  chocolatey-publish.yml  ci.yml  copr-publish.yml  coverage.yml  deploy-web.yml  flatpak-publish.yml  gentoo-publish.yml  (+19 more)
apps/api-rust/: .dockerignore  Cargo.toml  Dockerfile  build-docker.sh
apps/api-rust/src/: main.rs  rejection.rs
apps/api-rust/src/filters/: attachment_filters.rs  backup_filters.rs  content_filters.rs  mod.rs  node_filters.rs  tag_filters.rs  user_filters.rs  workspace_filters.rs
apps/api-rust/src/handlers/: attachment_handlers.rs  backup_handlers.rs  content_handlers.rs  mod.rs  node_handlers.rs  tag_handlers.rs  user_handlers.rs  workspace_handlers.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/icons/: README.md  create-icns.sh  generate-icons.sh  icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: attachment_commands.rs  backup_commands.rs  content_commands.rs  file_commands.rs  mod.rs  node_commands.rs  tag_commands.rs  user_commands.rs  workspace_commands.rs
apps/desktop/src-tauri/src/db/: attachment_db_fn.rs  connection.rs  content_db_fn.rs  mod.rs  node_db_fn.rs  tag_db_fn.rs  test_utils.rs  user_db_fn.rs  workspace_db_fn.rs
apps/desktop/src-tauri/src/entity/: content.rs  mod.rs  node.rs  workspace.rs
apps/desktop/src-tauri/src/fn/: mod.rs
apps/desktop/src-tauri/src/fn/backup/: backup_fn.rs
apps/desktop/src-tauri/src/fn/crypto/: crypto_fn.rs  mod.rs
apps/desktop/src-tauri/src/fn/node/: mod.rs  node_service_fn.rs  node_transform_fn.rs
apps/desktop/src-tauri/src/migration/: m20240101_000001_create_workspace.rs  m20240101_000002_create_node.rs  m20240101_000003_create_content.rs  mod.rs
apps/desktop/src-tauri/src/repo/: content_repo.rs  mod.rs  node_repo.rs  workspace_repo.rs
apps/desktop/src-tauri/src/services/: backup_service.rs  crypto_service.rs  mod.rs  node_service.rs
apps/desktop/src-tauri/src/types/: config.rs  content.rs  error.rs  mod.rs  node.rs  workspace.rs
apps/desktop/src-tauri/src/types/attachment/: attachment_entity.rs  attachment_interface.rs  mod.rs
apps/desktop/src-tauri/src/types/content/: content_builder.rs  content_entity.rs  content_interface.rs  mod.rs
apps/desktop/src-tauri/src/types/node/: mod.rs  node_builder.rs  node_entity.rs  node_interface.rs
apps/desktop/src-tauri/src/types/tag/: mod.rs  tag_entity.rs
apps/desktop/src-tauri/src/types/user/: mod.rs  user_entity.rs  user_interface.rs
apps/desktop/src-tauri/src/types/workspace/: mod.rs  workspace_interface.rs
aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin  PKGBUILD-binary  PKGBUILD.local  grain.desktop  novel-editor.desktop
docs/: ADMIN_ERRORS_FIXED.md  ADMIN_FIXES.md  ADMIN_PROJECT_COMPLETE.md  ADMIN_SETUP_FIX.md  AUR发布指南.md  AUR快速发布.md  DOCS_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  PROJECT_SUMMARY.md  README.md  auto-update-guide.md  automated-release-workflow.md  automation-features.md  branch-cleanup-quick-guide.md  branch-management-guide.md  branch-protection-guide.md  branch-protection-quick-start.md  data-architecture.md  functional-programming-fix-plan.md  git-hooks-guide.md  git-hooks-version-system.md  github-hooks-guide.md  lint-refactoring-plan.md  lint-refactoring-progress.md  lint-urgent-fix-plan.md  linux-installation-guide.md  microsoft-store-guide.md  msix-commercial-cert-guide.md  release-tag-fix.md  rust-backend-guide.md  snap-quick-start.md  snap-store-guide.md  tag-system.md  version-system-example.md  version-system-quick-guide.md  web-deployment-guide.md  windows-install-guide.md  windows-publishing-summary.md  winget-publish-guide.md  workflows-explained.md  (+3 more)
flatpak/: README.md  com.lotus.Grain.desktop  com.lotus.Grain.metainfo.xml  com.lotus.Grain.yml  com.lotus.NovelEditor.desktop  com.lotus.NovelEditor.metainfo.xml  com.lotus.NovelEditor.yml
scripts/: DEPLOY_SCRIPTS_REVIEW.md  README.md  build-and-deploy-web.sh  build-desktop.sh  bump-version.sh  check-download-stats.sh  check-env.sh  cleanup-branches.sh  create-tag.sh  deploy-web.sh  fix-admin-dev.sh  fix-db-env.sh  fix-force-dynamic.sh  fix-postgresql-simple.sh  fix-postgresql.sh  generate-updater-keys.sh  install-shell-config.sh  publish-aur-bin.sh  publish-snap.sh  release-aur.sh  set-version.sh  setup-branch-protection.sh  setup-dev-env.sh  setup-github-labels.sh  setup-nginx-https.sh  setup-rust-fast-build.sh  start-web.sh  test-aur-build.sh  test-aur-from-binary.sh  test-aur-local.sh  test-bump-version.sh  test-local-build.sh  test-msix-url.sh  update-icons.sh  update-workflows-for-auto-trigger.sh  修复PostgreSQL.sh  修复PostgreSQL并配置API.sh
snap/: snapcraft.yaml
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: tauri.conf.json
winget-manifests/: Jeason.Grain.installer.yaml  Jeason.Grain.locale.zh-CN.yaml  Jeason.Grain.yaml  Jeason.NovelEditor.installer.yaml  Jeason.NovelEditor.locale.zh-CN.yaml  Jeason.NovelEditor.yaml
(+2183 files in other folders)
