[package]
name = "grain-api"
version = "0.1.0"
edition = "2021"
description = "Grain HTTP API Server - 基于 Warp 的 REST API 服务器"
authors = ["Jeason"]

[dependencies]
# ============================================
# 共享核心库
# ============================================
rust-core = { path = "../../packages/rust-core" }

# ============================================
# Web 框架
# ============================================
warp = "0.3"
tokio = { version = "1", features = ["full"] }

# ============================================
# 数据库
# ============================================
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# ============================================
# 序列化
# ============================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============================================
# 日志
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ============================================
# 工具库
# ============================================
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
