[package]
name = "grain"
version = "0.1.248"
description = "A minimalist writing sanctuary for long-form content. Pure, elegant, and distraction-free."
authors = ["Jeason"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "test_db"
path = "src/bin/test_db.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ============================================
# Tauri 框架
# ============================================
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# ============================================
# ORM 和数据库
# ============================================
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = "1.1"

# ============================================
# 异步运行时
# ============================================
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# ============================================
# 序列化
# ============================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============================================
# 错误处理
# ============================================
thiserror = "2"
anyhow = "1"

# ============================================
# 日志和追踪
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ============================================
# 密钥管理
# ============================================
keyring = { version = "3", features = ["linux-native"] }

# ============================================
# 工具库
# ============================================
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
dirs = "5"

# ============================================
# 文件系统
# ============================================
walkdir = "2"
notify = "7"
zip = "2"
tempfile = "3"

[dev-dependencies]
# ============================================
# 测试框架
# ============================================
proptest = "1"
fake = { version = "3", features = ["derive"] }
tokio-test = "0.4"
