[package]
name = "grain"
version = "0.1.558"
description = "A minimalist writing sanctuary for long-form content. Pure, elegant, and distraction-free."
authors = ["Jeason"]
edition = "2021"
default-run = "grain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ============================================
# Tauri 框架
# ============================================
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# ============================================
# ORM 和数据库
# ============================================
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = "1.1"

# ============================================
# 异步运行时
# ============================================
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# ============================================
# 序列化
# ============================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============================================
# 错误处理
# ============================================
thiserror = "2"
anyhow = "1"

# ============================================
# 日志和追踪
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ============================================
# 密钥管理
# ============================================
keyring = { version = "3", features = ["linux-native"] }

# ============================================
# 工具库
# ============================================
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
dirs = "5"

# ============================================
# 文件系统
# ============================================
walkdir = "2"
notify = "7"
zip = "2"
tempfile = "3"

# ============================================
# 共享核心库
# ============================================
rust-core = { path = "../../../packages/rust-core" }

[dev-dependencies]
# ============================================
# 测试框架
# ============================================
proptest = "1"
fake = { version = "3", features = ["derive"] }
tokio-test = "0.4"

# ============================================
# Profile 配置 - 优化编译速度
# ============================================

# 开发配置 - 优化编译速度
[profile.dev]
opt-level = 0              # 不优化，加快编译
debug = 1                  # 减少调试信息（2 = 完整，1 = 行号，0 = 无）
incremental = true         # 启用增量编译
codegen-units = 256        # 更多并行编译单元
split-debuginfo = "unpacked"  # Linux 上更快的链接

# 开发依赖 - 使用优化减少运行时开销
[profile.dev.package."*"]
opt-level = 2              # 依赖使用优化级别 2
debug = false              # 依赖不生成调试信息

# 发布配置 - 优化运行性能
[profile.release]
opt-level = 3              # 最高优化级别
lto = "thin"               # 薄 LTO，平衡编译时间和性能
codegen-units = 1          # 单一编译单元，更好的优化
strip = true               # 移除符号，减小二进制大小
panic = "abort"            # panic 时直接终止，减小二进制

# 测试配置 - 平衡编译速度和运行速度
[profile.test]
opt-level = 1              # 轻度优化，测试运行更快
debug = 1                  # 保留行号信息用于调试
incremental = true         # 启用增量编译

# 构建脚本配置
[profile.dev.build-override]
opt-level = 0              # 构建脚本不优化
codegen-units = 256        # 并行编译
